# kuk

./: .gitignore  .mcp.json  Cargo.toml  README.md  prd.md
kuk-pm/: Cargo.toml
kuk-pm/src/: error.rs  lib.rs  main.rs  mcp_stdio.rs
kuk-pm/src/cli/: commands.rs  mod.rs
kuk-pm/src/git/: mod.rs
kuk-pm/src/model/: git_meta.rs  mod.rs  project.rs  sprint.rs
kuk-pm/src/reports/: mod.rs
kuk-pm/src/sync/: mod.rs
kuk-pm/tests/: cli_tests.rs
src/: error.rs  lib.rs  main.rs  mcp_stdio.rs
src/cli/: commands.rs  mod.rs
src/model/: board.rs  card.rs  config.rs  index.rs  mod.rs
src/server/: api.rs  mcp.rs  mod.rs
src/storage/: store.rs
src/tui/: app.rs  ui.rs
tests/: cli_tests.rs
