[package]
name = "kuk-pm"
version = "0.1.0"
edition = "2024"
description = "Git-native project manager for kuk kanban boards"
license = "MIT"

[lib]
name = "kuk_pm"
path = "src/lib.rs"

[[bin]]
name = "kuk-pm"
path = "src/main.rs"

[dependencies]
kuk = { path = ".." }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
gix = "0.68"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
